# swahili-learn-new

./: .gitignore  .windsurfrules  FEATURES.md  README.md
backend/: .env.example  .gitignore  FEATURES.md  README.md  create_tables.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_db_connection.py
backend/alembic/: env.py
backend/alembic/versions/: 1122c34ddde0_create_initial_tables.py  12970368d66c_add_course_enrollment_model.py  4ad264799b80_add_soft_delete_to_courses.py  675b2df5247b_add_course_progress_tracking_models.py  71c55d96910f_add_categories_and_course_difficulty.py  9bdaf3389a20_add_password_reset_token_fields.py  f0b5d2235f06_add_lesson_visibility_controls.py
backend/app/: __init__.py  database.py  exceptions.py  main.py
backend/app/models/: __init__.py  assessment.py  certificate.py  course.py  lesson.py  lesson_progress.py  notification.py  user.py
backend/app/routes/: assessments.py  categories.py  courses.py  enrollments.py  lesson_routes.py  lessons.py  progress.py  users.py
backend/app/schemas/: assessment.py  course.py  lesson.py  search_schema.py  user.py
backend/app/security/: access_control.py
backend/app/services/: advanced_analytics_service.py  auth.py  course_progress_service.py  database.py  lesson_service.py  notification_service.py  performance_analytics.py  quiz_service.py  search_service.py
backend/migrations/: env.py
backend/tests/: README.md  conftest.py  test_assessments.py  test_courses.py  test_enrollments.py  test_lesson_visibility.py  test_lessons.py  test_search.py  test_users.py
(+43 files in other folders)
