[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swahili-learn"
version = "0.1.0"
description = "A Learning Management System for Swahili Language Learning"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["app"]
